# market-indicator

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: generate_sample.py  sample_ohlcv.csv  scan_manifest.json
src/unified_market_indicator/: __init__.py  backtest.py  cli.py  engine.py  indicators.py  io.py  models.py  portfolio.py  quality.py  regime.py  risk.py  scanner.py  server.py  timeframe.py  validation.py
src/unified_market_indicator/providers/: __init__.py  base.py  binance.py  http.py  upbit.py  yahoo.py
src/unified_market_indicator/static/: __init__.py  adaptive.css  app.js  context.css  index.html  robustness.css  styles.css
tests/: helpers.py  test_engine.py  test_indicators.py  test_providers.py  test_quality_regime.py  test_risk_scanner.py  test_server.py  test_validation_portfolio.py
