[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-market-indicator"
version = "0.4.0"
description = "Dependency-free stock and crypto technical indicator, signal, and backtesting engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "khj874869" }]
keywords = ["stock", "crypto", "indicator", "backtest", "ohlcv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
unified-indicator = "unified_market_indicator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unified_market_indicator = ["static/*.html", "static/*.css", "static/*.js"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
